Fix SonarQube bugs, vulnerabilities, code smells and hotspots